[package]
name = "rustbasic-breeze"
version = "0.0.1"
edition = "2024"
description = "Authentication scaffolding package for the RustBasic Framework."
license = "MIT"
homepage = "https://github.com/herisvan321/rustbasic"
repository = "https://github.com/herisvan321/rustbasic"

[dependencies]
rustbasic-core = "0.1"
tokio = { version = "1.52.1", features = ["full"] }
colored = "3.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.4", features = ["macros", "with-chrono"] }
async-trait = "0.1.86"
regex = "1.10"
