[package]
name = "rustbasic-breeze"
version = "0.0.9"
edition = "2024"
description = "Authentication scaffolding package for the RustBasic Framework."
license = "MIT"
homepage = "https://github.com/herisvan321/rustbasic"
repository = "https://github.com/herisvan321/rustbasic"

[dependencies]
rustbasic-core = "0.1"
tokio = { version = "1.52.1", features = ["full"] }
colored = "3.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.86"
regex = "1.10"
sqlx = { version = "0.8", features = ["any", "sqlite", "mysql", "runtime-tokio", "tls-rustls"], default-features = false }
